--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "sylk",
   "version": "0.1.0",
   "engines": {
-    "node": "18.x"
+    "node": "22.x" 
   },
   "homepage": ".",
   "private": true,
   "dependencies": {
+    "typescript": "^5.9.3",
+    "yaml": "^2.8.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
